units: add wlogout

--- a/.config/wlogout/style.css
+++ b/.config/wlogout/style.css
@@ -1,6 +1,6 @@
 window {
   font-family: "JetbrainsMono Nerd Font";
-  font-size: 14pt;
+  font-size: 14px;
   color: rgba(205, 214, 244, 1);
   background-color: rgba(30, 30, 46, 0.5);
 }
